[package]
name = "github_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.0"
tokio = { version = "1.0.0", features = [ "full" ] }

